Add add-event button to body-details

--- a/src/app/body-details/body-details.component.css
+++ b/src/app/body-details/body-details.component.css
@@ -51,3 +51,9 @@
 .subsection {
     margin-bottom: 10px;
 }
+
+.float-fixed-right-bottom {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+}
