--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -23,6 +23,7 @@
 <button mat-fab
         [disabled]="!dataService.loggedIn"
         class="float-fixed-right-bottom"
-        (click)="AddEvent()">
+        [routerLink]="['/add-event']"
+        [queryParams]="{date: dateToDate(selDate).toDateString()}">
     <mat-icon>add</mat-icon>
 </button>
