--- a/src/app/event-details/event-details.component.css
+++ b/src/app/event-details/event-details.component.css
@@ -13,7 +13,17 @@
 .card-header {
     display: flex;
     padding: 12px;
-    padding-bottom: 3px;    
+    padding-bottom: 0;
+}
+
+.share-div {
+    text-align: right;
+    padding:0;
+    margin:0
+}
+
+.theme-header {
+    padding-bottom: 3px;
 }
 
 .action-buttons {
