--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -24,7 +24,7 @@
               <mat-icon>edit</mat-icon>
           </button>
           <button mat-icon-button
-                 (click)="toggleShare()">
+                 (click)="shareShowing = !shareShowing">
               <mat-icon>share</mat-icon>
           </button>
         </div>
