--- a/src/app/body-details/body-details.component.css
+++ b/src/app/body-details/body-details.component.css
@@ -15,22 +15,30 @@
 }
 
 .card-header {
+    display: flex;
     padding: 12px;
-    padding-bottom: 3px;
-    position: relative;
+    padding-bottom: 0;
 }
 
-.edit-button {
-    position: absolute;
-    top: 2px;
-    right:25px;
+.share-div {
+    text-align: right;
+    padding:0;
+    margin:0
+}
+
+.theme-header {
+    padding-bottom: 3px;
+}
+
+.action-buttons {
+    margin-left: auto;
+    margin-top: -4px;
 }
 
 .body-name {
     font-weight: bold;
     font-size: 14pt;
-    padding-left: 10px;
-    padding-bottom: 8px;
+    margin-top: 5px;
 }
 
 .description {
