Fix errors on body-detail page We were trying to get a parameter on body before it was inited

--- a/src/app/body-details/body-details.component.html
+++ b/src/app/body-details/body-details.component.html
@@ -73,7 +73,7 @@
 </div>
 
 <button mat-fab
-        *ngIf="dataService.HasBodyPermission(body.id, 'AddE')"
+        *ngIf="body && dataService.HasBodyPermission(body.id, 'AddE')"
         [disabled]="!dataService.loggedIn"
         class="float-fixed-right-bottom"
         [routerLink]="['/add-event']"
