--- a/src/app/add-event/add-event.component.html
+++ b/src/app/add-event/add-event.component.html
@@ -76,6 +76,13 @@
   </div>
 
   <div>
+      <mat-form-field class="full-width-details">
+        <input matInput placeholder="Website URL"
+                  [(ngModel)]="event.website_url" rows=8>
+      </mat-form-field>
+    </div>
+
+  <div>
     <mat-form-field class="full-width-details">
       <textarea matInput placeholder="Description"
                 [(ngModel)]="event.description" rows=8>
