--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -23,6 +23,12 @@
                 *ngIf="dataService.CanEditEvent(event)">
               <mat-icon>edit</mat-icon>
           </button>
+          <a mat-icon-button
+            *ngIf="event.website_url && event.website_url !== ''"
+            [href]="event.website_url"
+            target="_blank">
+            <i class="fas fa-globe fa-lg"></i>
+          </a>
           <button mat-icon-button
                  (click)="shareShowing = !shareShowing">
               <mat-icon>share</mat-icon>
