Add my-events component

--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -9,7 +9,7 @@
 </div>
 
 <a [routerLink]="['/feed']" mat-list-item><mat-icon>list</mat-icon> &nbsp; Feed</a>
-<a mat-list-item><mat-icon>event</mat-icon> &nbsp; Events</a>
+<a [routerLink]="['/my-events']" mat-list-item><mat-icon>event</mat-icon> &nbsp; My Events</a>
 <a mat-list-item><mat-icon>people</mat-icon> &nbsp; People</a>
 <a mat-list-item><mat-icon>rss_feed</mat-icon> &nbsp; Placement Blog</a>
 <a mat-list-item><mat-icon>message</mat-icon> &nbsp; CMS</a>
