--- a/src/app/my-events/my-events.component.html
+++ b/src/app/my-events/my-events.component.html
@@ -8,8 +8,7 @@
           <mat-tab *ngFor="let role of roles" [label]="role.body_detail.name" >
             <app-event-card 
               *ngFor="let event of role.events"
-              [event]="event"
-              [routerLink]="['/event-details', event.id]">
+              [event]="event">
             </app-event-card>
           </mat-tab>
       </mat-tab-group>
