Add followed events to my-events, fix some styles

--- a/src/app/my-events/my-events.component.css
+++ b/src/app/my-events/my-events.component.css
@@ -1,8 +1,14 @@
 .full-container {
-    margin-top: 10px;
+    height: 100%;
 }
 
 .detail-card {
     max-width: 480px;
     min-height: 60vh;
+}
+
+@media (min-width: 480px) {
+    .full-container {
+        margin-top: 10px;
+    }
 }
