--- a/src/app/update-body/update-body.component.html
+++ b/src/app/update-body/update-body.component.html
@@ -1,3 +1,43 @@
-<p>
-  update-body works!
-</p>
+<div class="loading-spinner">
+  <mat-spinner *ngIf="!body"
+              mode="indeterminate">
+  </mat-spinner>
+</div>
+
+<div id="main" class="mat-elevation-z3" *ngIf="body">
+
+<div class="theme-header">
+  <input style="display:none;" type="file" accept="image/*" #file id="file" (change)="uploadImage($event.target.files)">
+  <img class="header-image"
+       [src]="body.image_url"
+       src-fallback="/assets/add_image_placeholder.png"
+       (click)="file.click()">
+
+  <div class="card-header primary-background-color">
+      <mat-form-field color="accent" class="full-width">
+        <input [(ngModel)]="body.name" matInput required #bodyName
+               name="body_name" placeholder="Body Name">
+        <mat-hint align="end">{{bodyName.value.length}} / 50</mat-hint>
+      </mat-form-field>
+  </div>
+</div>
+
+<div>
+  <mat-form-field class="full-width-details">
+    <input matInput placeholder="Short Description"
+              [(ngModel)]="body.short_description">
+  </mat-form-field>
+
+  <mat-form-field class="full-width-details">
+    <textarea matInput placeholder="Description"
+              [(ngModel)]="body.description" rows=8>
+    </textarea>
+  </mat-form-field>
+
+  <mat-form-field class="full-width-details">
+    <input matInput placeholder="Website URL"
+              [(ngModel)]="body.website_url">
+  </mat-form-field>
+</div>
+
+</div>
