Add markdown support for descriptions

--- a/src/app/body-details/body-details.component.html
+++ b/src/app/body-details/body-details.component.html
@@ -45,9 +45,7 @@
     </div>
 
     <div class="description">
-      <p class="multi-line-text">
-        {{ body.description }}
-      </p>
+      <markdown [data]="body.description"></markdown>
     </div>
 
     <div class="subsection">
