Style links in markdown

--- a/src/app/body-details/body-details.component.html
+++ b/src/app/body-details/body-details.component.html
@@ -44,7 +44,7 @@
         </mat-checkbox>
     </div>
 
-    <div class="description">
+    <div class="description markdown">
       <markdown [data]="body.description"></markdown>
     </div>
 
