--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -53,7 +53,7 @@
           GOING
         </mat-checkbox>
     </div>
-    <div class="description">
+    <div class="description markdown">
       <markdown [data]="event.description"></markdown>
     </div>
 
