--- a/src/app/user-details/user-details.component.html
+++ b/src/app/user-details/user-details.component.html
@@ -9,7 +9,7 @@
   <div id="head">
     <img [src]="profile.profile_pic"
          src-fallback="/assets/useravatar.jpg"
-         class="profile-pic img-circle">
+         class="profile-pic img-circle object-cover">
     <div id="info-header">
       <b>{{ profile.name }}</b><br>
       <span class="grey-text-on-white">
