--- a/src/app/user-card/user-card.component.html
+++ b/src/app/user-card/user-card.component.html
@@ -1,7 +1,10 @@
 <mat-card class="sub-card" *ngIf="profile"
           [routerLink]="['/user-details', profile.id]">
   <mat-card-header>
-    <img mat-card-avatar [src]="profile.profile_pic" src-fallback="/assets/useravatar.jpg"/>
+    <img mat-card-avatar
+         [src]="profile.profile_pic"
+         src-fallback="/assets/useravatar.jpg"
+         class="object-cover"/>
     <mat-card-title>{{profile.name}}</mat-card-title>
     <mat-card-subtitle>
       <ng-container *ngIf="!role; else hasrole">
