Add object cover to navmenu header image

--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -1,6 +1,6 @@
 <div class="head-card primary-background-color"
      (click)="OpenMyProfile()">
-    <img class="profile-pic img-circle"
+    <img class="profile-pic img-circle object-cover"
          [src]="profilePic">
     <div>
         <div>{{ userName }}</div>
