Refactor navmenu, add CMS link

--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -8,11 +8,39 @@
     </div>
 </div>
 
-<a [routerLink]="['/feed']" mat-list-item><mat-icon>list</mat-icon> &nbsp; Feed</a>
-<a [routerLink]="['/my-events']" mat-list-item><mat-icon>event</mat-icon> &nbsp; My Events</a>
-<a mat-list-item><mat-icon>people</mat-icon> &nbsp; People</a>
-<a mat-list-item><mat-icon>rss_feed</mat-icon> &nbsp; Placement Blog</a>
-<a mat-list-item><mat-icon>message</mat-icon> &nbsp; CMS</a>
-<a [routerLink]="['/calendar']" mat-list-item><mat-icon>event_available</mat-icon> &nbsp; Calendar</a>
-<a mat-list-item><mat-icon>access_time</mat-icon> &nbsp; Time Table</a>
-<a mat-list-item><mat-icon>map</mat-icon> &nbsp; Map</a>
+<a [routerLink]="['/feed']"
+   mat-list-item>
+    <mat-icon>list</mat-icon> &nbsp; Feed
+</a>
+
+<a [routerLink]="['/my-events']"
+   mat-list-item>
+    <mat-icon>event</mat-icon> &nbsp; My Events
+</a>
+
+<a mat-list-item>
+    <mat-icon>people</mat-icon> &nbsp; People
+</a>
+
+<a mat-list-item>
+    <mat-icon>rss_feed</mat-icon> &nbsp; Placement Blog
+</a>
+
+<a href="https://gymkhana.iitb.ac.in/cms_new/"
+   target="_blank"
+   mat-list-item>
+    <mat-icon>message</mat-icon> &nbsp; CMS
+</a>
+
+<a [routerLink]="['/calendar']"
+   mat-list-item>
+    <mat-icon>event_available</mat-icon> &nbsp; Calendar
+</a>
+
+<a mat-list-item>
+    <mat-icon>access_time</mat-icon> &nbsp; Time Table
+</a>
+
+<a mat-list-item>
+    <mat-icon>map</mat-icon> &nbsp; Map
+</a>
