Add placement blog component

--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -22,7 +22,8 @@
     <mat-icon>people</mat-icon> &nbsp; People
 </a>
 
-<a mat-list-item>
+<a [routerLink]="['/placement-blog']"
+   mat-list-item>
     <mat-icon>rss_feed</mat-icon> &nbsp; Placement Blog
 </a>
 
