Change absolute paths to relative, add new env

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login-container" *ngIf="!authenticating">
-  <img src="/assets/logo.png" class="login-button">
+  <img src="assets/logo.png" class="login-button">
   <button mat-raised-button
           (click)='login()'
           color="accent"
