--- a/src/app/user-card/user-card.component.html
+++ b/src/app/user-card/user-card.component.html
@@ -3,7 +3,7 @@
   <mat-card-header>
     <img mat-card-avatar
          [src]="profile.profile_pic"
-         src-fallback="/assets/useravatar.jpg"
+         src-fallback="assets/useravatar.jpg"
          class="object-cover"/>
     <mat-card-title>{{profile.name}}</mat-card-title>
     <mat-card-subtitle>
