--- a/src/app/body-card/body-card.component.html
+++ b/src/app/body-card/body-card.component.html
@@ -4,7 +4,7 @@
   <mat-card-header>
     <img mat-card-avatar
         [src]="body.image_url" 
-         src-fallback="/assets/iitb_logo.svg"
+         src-fallback="assets/iitb_logo.svg"
          class="object-cover" />
     <mat-card-title>{{ body.name }}</mat-card-title>
     <mat-card-subtitle>
