--- a/src/app/body-card/body-card.component.html
+++ b/src/app/body-card/body-card.component.html
@@ -1,6 +1,6 @@
 <mat-card *ngIf="body"
           class="sub-card"
-          [routerLink]="['/body-details', body.id]">
+          [routerLink]="['/org', body.str_id]">
   <mat-card-header>
     <img mat-card-avatar
         [src]="body.image_url" 
