--- a/src/app/body-details/body-details.component.html
+++ b/src/app/body-details/body-details.component.html
@@ -54,7 +54,7 @@
         Upcoming Events
       </div>
       <app-event-card *ngFor="let event of body.events"
-                    [routerLink]="['/event-details', event.id]"
+                    [routerLink]="['/event', event.id]"
                     [event]="event">
       </app-event-card>
     </div>
