--- a/src/app/event-card/event-card.component.html
+++ b/src/app/event-card/event-card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="sub-card" *ngIf="event" [routerLink]="overrideClick ? null : ['/event-details', event.id]">
+<mat-card class="sub-card" *ngIf="event" [routerLink]="overrideClick ? null : ['/event', event.id]">
   <mat-card-header>
     <img mat-card-avatar
          [src]="event.image_url"
