--- a/src/app/user-card/user-card.component.html
+++ b/src/app/user-card/user-card.component.html
@@ -1,5 +1,5 @@
 <mat-card class="sub-card" *ngIf="profile"
-          [routerLink]="['/user-details', profile.id]">
+          [routerLink]="['/user', profile.ldap_id || profile.id]">
   <mat-card-header>
     <img mat-card-avatar
          [src]="profile.profile_pic"
