--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -4,26 +4,22 @@
     </mat-spinner>
 </div>
 
-<div *ngIf="events" class="events-list mat-elevation-z3" [@enterLeft]='bstr(!mobileQuery.matches)'>
-    <mat-card class="head-card" (click)=OpenEvent(events[0])>
-        <img mat-card-image [src]="events[0].image_url" alt="">
-        <div> {{ events[0].name }} </div>
-        <span class="subhead">{{ dataService.GetDate(events[0].start_time) }} | {{ events[0].venues_str }}</span>
-    </mat-card>
+<app-event-sidebar-desktop
+    [event]="selectedEvent"
+    [contentInited]="events">
 
-    <app-event-card *ngFor="let event of events.slice(1, events.length)"
-                    (click)=OpenEvent(event)
-                    [event]="event"
-                    overrideClick=true>
-    </app-event-card>
-</div>
+    <div *ngIf="events" class="events-list mat-elevation-z3">
+        <mat-card class="head-card" (click)=OpenEvent(events[0])>
+            <img mat-card-image [src]="events[0].image_url" alt="">
+            <div> {{ events[0].name }} </div>
+            <span class="subhead">{{ dataService.GetDate(events[0].start_time) }} | {{ events[0].venues_str }}</span>
+        </mat-card>
+    
+        <app-event-card *ngFor="let event of events.slice(1, events.length)"
+                        (click)=OpenEvent(event)
+                        [event]="event"
+                        overrideClick=true>
+        </app-event-card>
+    </div>
 
-<div class="event-details-container mat-elevation-z3"
-     *ngIf="!mobileQuery.matches && showingEventDetails"
-     [hidden]="hiddenEventDetails"
-     [@enterRight]="bstr(animedEventDetails)">
-    <app-event-details
-      [eventId]="eventDetailsId"
-      (load)="eventDeatilsLoaded($event)">
-    </app-event-details>
-</div>
+</app-event-sidebar-desktop>
