--- a/src/app/event-sidebar-desktop/event-sidebar-desktop.component.html
+++ b/src/app/event-sidebar-desktop/event-sidebar-desktop.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="contentInited" [@enterLeft]="bstr(!mobileQuery.matches)">
+<div [@enterLeft]="bstr(!mobileQuery.matches)">
   <ng-content></ng-content>
 </div>
 
