--- a/src/app/event-sidebar-desktop/event-sidebar-desktop.component.css
+++ b/src/app/event-sidebar-desktop/event-sidebar-desktop.component.css
@@ -1,4 +1,25 @@
+@media (max-width: 767px) {
+    .events-list {
+        margin: 0 auto;
+        width: 100%;
+        max-width: 400px;
+    }
+}
+
+@media (min-width: 900px) {
+    .events-list {
+        width: 400px;
+    }
+}
+
 @media (min-width: 768px) {
+    .events-list {
+        position: absolute;
+        left: calc(47% - 400px);
+        max-width: 400px;
+        margin: 10px;
+    }
+
     .event-details-container {
         position: fixed;
         left: 53%;
@@ -12,6 +33,11 @@
 }
 
 @media (min-width: 768px) and (max-width: 900px) {
+    .events-list {
+        width: 360px;
+        left: calc(48% - 360px);
+    }
+
     .event-details-container {
         width:360px;
         left: 52%;
