Renamve PlacementBlogComponent to BlogComponent

--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -23,12 +23,12 @@
     <mat-icon>people</mat-icon> &nbsp; People
 </a>
 
-<a [routerLink]="['/placement-blog/' + dataService.EncodeObject(api.PlacementBlog)]"
+<a [routerLink]="['/blog/' + dataService.EncodeObject(api.PlacementBlog)]"
    mat-list-item>
     <mat-icon>rss_feed</mat-icon> &nbsp; Placement Blog
 </a>
 
-<a [routerLink]="['/placement-blog/' + dataService.EncodeObject(api.TrainingBlog)]"
+<a [routerLink]="['/blog/' + dataService.EncodeObject(api.TrainingBlog)]"
    mat-list-item>
     <mat-icon>rss_feed</mat-icon> &nbsp; Training Blog
 </a>
