--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -13,7 +13,7 @@
                        (change)="dateChanged($event)"></xunk-calendar>
         <mat-chip-list class="mat-chip-list-stacked">
             <mat-chip color="accent" selected="true" id="head-chip">
-                {{ GetCount(selDate) }}
+                <div>{{ GetCount(selDate) }}</div>
             </mat-chip>
         </mat-chip-list>
 
