Add news component

--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -14,6 +14,11 @@
     <mat-icon>list</mat-icon> &nbsp; Feed
 </a>
 
+<a [routerLink]="['/news/']"
+   mat-list-item>
+    <mat-icon>rss_feed</mat-icon> &nbsp; News
+</a>
+
 <a [routerLink]="['/my-events']"
    mat-list-item>
     <mat-icon>event</mat-icon> &nbsp; My Events
