--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,3 +1,23 @@
-<p>
-  news works!
-</p>
+<div class="loading-spinner">
+    <mat-spinner *ngIf="!feed"
+                mode="indeterminate">
+    </mat-spinner>
+</div>
+
+<div *ngIf="feed" class="detail-card">
+  <div *ngFor="let item of feed">
+    <mat-card class="feed-card" (click)="openLink(item.link)">
+      <mat-card-header>
+        <mat-card-title>{{item.title}}</mat-card-title>
+        <img mat-card-avatar
+          [src]="item.body.image_url"
+          src-fallback="assets/placeholder.png"
+          class="object-cover" />
+        <mat-card-subtitle><b>{{item.body.name}}</b> - {{item.published | date:"dd-MMM-yyyy HH:mm"}}</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <markdown [data]="item.content"></markdown>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
