Allow editing blog_url in body

--- a/src/app/update-body/update-body.component.html
+++ b/src/app/update-body/update-body.component.html
@@ -39,6 +39,11 @@
     <input matInput placeholder="Website URL"
               [(ngModel)]="body.website_url">
   </mat-form-field>
+
+  <mat-form-field class="full-width-details">
+    <input matInput placeholder="Blog URL - RSS"
+              [(ngModel)]="body.blog_url">
+  </mat-form-field>
 </div>
 
 <div>
