--- a/src/app/body-details/body-details.component.css
+++ b/src/app/body-details/body-details.component.css
@@ -1,11 +1,11 @@
 .detail-card {
     z-index: 3;
-    margin-bottom: 0;
+    margin-bottom: 10px;
 }
 
 @media (max-width: 767px) {
     .detail-card {
-        min-height: 100vh;
+        margin-bottom: 0;
     }
 }
 
