Disable follow, going, interested when not logged in (fix #32)

--- a/src/app/body-details/body-details.component.html
+++ b/src/app/body-details/body-details.component.html
@@ -39,7 +39,8 @@
 
     <div style="text-align:center">
         <mat-checkbox [ngModel]="dataService.followingBody(body.id)"
-                      (change)="markFollow($event)">
+                      (change)="markFollow($event)"
+                      [disabled]="!dataService.loggedIn">
           FOLLOW
         </mat-checkbox>
     </div>
