--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -44,12 +44,14 @@
 
     <div style="text-align:center">
         <mat-checkbox [ngModel]="dataService.InterestedEvent(event.id)"
-                      (change)="markUES(dataService.InterestedEvent(event.id), 1, $event);">
+                      (change)="markUES(dataService.InterestedEvent(event.id), 1, $event);"
+                      [disabled]="!dataService.loggedIn">
           INTERESTED
         </mat-checkbox>
         &nbsp;&nbsp;&nbsp;
         <mat-checkbox [ngModel]="dataService.GoingEvent(event.id)"
-                      (change)="markUES(dataService.GoingEvent(event.id), 2, $event);">
+                      (change)="markUES(dataService.GoingEvent(event.id), 2, $event);"
+                      [disabled]="!dataService.loggedIn">
           GOING
         </mat-checkbox>
     </div>
